added about section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,5 +87,28 @@
         </div>
     </div>
 </section>
+
+<!--ABOUT-SECTION--------------------------------------------------------->
+
+
+<section id="about" class="about">
+    <div class="img-about scroll-scale">
+        <img src="4pic.jpg" alt="" class="info-about1">
+    </div>
+    <div class="about-content scroll-scale">
+        <span>Introduction</span>
+        <h2>About Me</h2>
+        <p>
+            Passionate about Web Developing in both Frontend and Backend technologies
+            and building new Projects.Also working on coding skills to improve further more
+            with much better logical problem approach.
+        </p>
+        <div class="btn-box">
+            <a href="#" class="btn">Know More!</a>
+        </div>
+    </div>
+</section>
+
+
 </body>
 </html>
