--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -109,6 +109,105 @@
     </div>
 </section>
 
+<!--SKILLS-SECTION----------------------------------------------------->
+
+
+<section class="skills" id="skills">
+    <div class="main-text scroll-scale">
+        <span>Technical and Professional</span>
+        <h2>My Skills</h2>
+    </div>
+    <div class="skill-main">
+        <div class="skill-left scroll-scale">
+            <h3>Frontend Skills</h3>
+            <div class="skill-bar">
+                <div class="info">
+                    <p>HTML</p>
+                    <p>90%</p>
+                </div>
+                <div class="bar">
+                    <span class="html"></span>
+                </div>
+            </div>
+
+            <div class="skill-bar">
+                <div class="info">
+                    <p>CSS</p>
+                    <p>80%</p>
+                </div>
+                <div class="bar">
+                    <span class="css"></span>
+                </div>
+            </div>
+
+            <div class="skill-bar">
+                <div class="info">
+                    <p>Javascript</p>
+                    <p>80%</p>
+                </div>
+                <div class="bar">
+                    <span class="javascript"></span>
+                </div>
+            </div>
+
+            <div class="skill-bar">
+                <div class="info">
+                    <p>Tailwind</p>
+                    <p>85%</p>
+                </div>
+                <div class="bar">
+                    <span class="tailwind"></span>
+                </div>
+            </div>
+
+            <div class="skill-bar">
+                <div class="info">
+                    <p>React JS</p>
+                    <p>85%</p>
+                </div>
+                <div class="bar">
+                    <span class="reactjs"></span>
+                </div>
+            </div>
+        </div>
+        <div class="skill-right scroll-scale">
+            <h3>Backend Skills</h3>
+            <div class="backend">
+                <div class="box">
+                    <div class="circle" data-dots="100" data-percent="75"></div>
+                    <div class="text">
+                       <!--  <big>70%</big> -->
+                        <small>Node JS</small>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="circle" data-dots="100" data-percent="72"></div>
+                    <div class="text">
+                        <!-- <big>75%</big> -->
+                        <small>Express JS</small>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="circle" data-dots="100" data-percent="80"></div>
+                    <div class="text"><!-- 
+                        <big>75%</big> -->
+                        <small>Mongo DB</small>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="circle" data-dots="100" data-percent="85"></div>
+                    <div class="text">
+                        <!-- <big>85%</big> -->
+                        <small>Python</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
