--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -209,5 +209,27 @@
     </div>
 </section>
 
+<!--PORTFOLIO-SECTION------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+
+<!--CONTACT SECTION------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
+    
+
+<section id="connect" class="contact">
+    <div class="main-text scroll-scale">
+        <span>Ask me Questions?</span>
+        <h2>Contact Me</h2>
+    </div>
+    <form action="#" class="scroll-bottom">
+        <input type="text" placeholder="Your name">
+        <input type="email" placeholder="Your email">
+        <input type="text" placeholder="Your Address">
+        <input type="number" placeholder="Phone Number">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+        <div class="btn-box formBtn">
+            <button type="submit" class="btn">Send Message</button>
+        </div>
+    </form>
+</section>
 </body>
 </html>
