--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -232,6 +232,11 @@
     </form>
 </section>
 
+<footer>
+    <p class="scroll-scale">Copyright &copy; 2024 by Praveen Kumar || All Right Reserved.</p>
+    <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+</footer>
+
 
 </body>
 </html>
