--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="home-image scroll-scale">
         <div class="img-box">
-            <img src="man.png" alt="web developer">
+            <img src="./man.png" alt="web developer">
         </div>
         <div class="liquid-shape">
             <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
@@ -93,7 +93,7 @@
 
 <section id="about" class="about">
     <div class="img-about scroll-scale">
-        <img src="4pic.jpg" alt="" class="info-about1">
+        <img src="./4pic.jpg" alt="" class="info-about1">
     </div>
     <div class="about-content scroll-scale">
         <span>Introduction</span>
